--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link" href="login.html">LOGIN</a>
             </li>
             <li class="nav-item" id="featuresMenuItem">
-                <a class="nav-link text-muted" href="#">FEATURES</a>
+                <a class="nav-link text-muted" href="#features_div">FEATURES</a>
             </li>
             <li class="nav-item" id="aboutMenuItem">
-                <a class="nav-link text-muted" href="#">ABOUT</a>
+                <a class="nav-link text-muted" href="#aboutus_div">ABOUT</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-muted" href="#">CONTACT</a>
@@ -47,7 +47,8 @@
         <p class="lead padding-top-10"><a href="register.html" class="text-secondary">Register Now</a></p>
         <div class="d-none d-md-block d-lg-block d-xl-block">
 
-            <p class="lead padding-top-10 text-secondary"><custom class="margin-right-32 no-select text-muted">Features</custom><custom class="margin-right-32 no-select text-muted">About us</custom></p>
+            <p class="lead padding-top-10"><custom class="margin-right-32 no-select "><a href="#features_div" class="no-select text-secondary">Features </a></custom>
+                <custom class="margin-right-32 no-select"><a href="#aboutus_div" class="text-secondary no-select">About us</a></custom></p>
 
         </div>
         <button class="navbar-toggler no-select" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
@@ -83,10 +84,10 @@
         <div class="d-none d-md-block d-lg-block d-xl-block col">
 
             <p class="align-content-center d-flex justify-content-center">
-            <div class="img mx-auto row align-content-end" style="height: 900px;width:auto;">
-                <img id="img-186960085240" class="col card-img-top mh-100 width-auto float-right img-fluid"
-                     src="img/facebookpaper.png" alt="Image of the specified item">
-            </div>
+            <!--<div class="img mx-auto row align-content-end" style="height: 900px;width:auto;">-->
+                <!--<img id="img-186960085240" class="col card-img-top mh-100 width-auto float-right img-fluid"-->
+                     <!--src="img/facebookpaper.png" alt="Image of the specified item">-->
+            <!--</div>-->
             </p>
 
         </div>
@@ -94,18 +95,18 @@
 
 
     <div class="row align-items-center panel whole-page"  data-color="dark-green">
-        <div class="d-none d-md-block d-lg-block d-xl-block col-4">
+        <!--<div class="d-none d-md-block d-lg-block d-xl-block col-4">-->
 
-            <p class="align-content-center d-flex justify-content-center">
-            <div class="img mx-auto row align-items-center" style="height: 800px;width:auto;">
-                <img class="col card-img-top mh-100 width-auto"
-                     src="img/nativeAmerican.png" alt="Image of the specified item">
-            </div>
-            </p>
-        </div>
+            <!--<p class="align-content-center d-flex justify-content-center">-->
+            <!--<div class="img mx-auto row align-items-center" style="height: 800px;width:auto;">-->
+                <!--<img class="col card-img-top mh-100 width-auto"-->
+                     <!--src="img/nativeAmerican.png" alt="Image of the specified item">-->
+            <!--</div>-->
+            <!--</p>-->
+        <!--</div>-->
 
 
-        <div class=" col-md-6 col-sm-12">
+        <div class=" col-md-8 col-sm-12">
             <h1 class="d-block d-md-none display-4 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1>
             <h1 class="d-none d-md-block d-lg-block d-xl-block display-1 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1><br>
             <p class="h3 text-light">
@@ -125,7 +126,7 @@
 
             <div class="col-sm-12">
                 <h1 class="display-4">Built by students, for students</h1>
-                <p class="h3 text-muted">
+                <p class="h3 text-dark">
                     Connecting classmates together is the best way to learn - having the ability to share class notes/videos and ask questions.
                     Celebre aims to enhance all students’ progress in their classes and in doing so, hopes to spread its mission nationwide.
                     <button class="btn btn-outline-dark my-2 my-sm-0 move-next-button" type="submit">See Features</button>
@@ -138,7 +139,7 @@
 
         </div>
     </div>
-    <div class="row align-items-center panel whole-page padding-bottom-400"  data-color="green">
+    <div class="row align-items-center panel whole-page padding-bottom-400" id="features_div" data-color="green">
 
         <div class="row align-items-center">
             <div class="col-sm-12">
@@ -146,7 +147,7 @@
             </div>
             <div class="d-none d-md-block d-lg-block d-xl-block col-md-6 ">
 
-                <p class="align-content-center d-flex justify-content-center"><img src="https://bootstrap-themes.github.io/marketing/assets/img/startup-2.jpg"></p>
+                <!--<p class="align-content-center d-flex justify-content-center"><img src="https://bootstrap-themes.github.io/marketing/assets/img/startup-2.jpg"></p>-->
 
             </div>
             <div class="col">
@@ -174,7 +175,7 @@
             </div>
             <div class="d-none d-md-block d-lg-block d-xl-block col-md-6 ">
 
-                <p class="align-content-center d-flex justify-content-center"><img src="https://bootstrap-themes.github.io/marketing/assets/img/startup-2.jpg"></p>
+                <!--<p class="align-content-center d-flex justify-content-center"><img src="https://bootstrap-themes.github.io/marketing/assets/img/startup-2.jpg"></p>-->
 
             </div>
         </div>
@@ -206,8 +207,8 @@
     </div>
 
 
-    <div class="row align-items-center panel whole-page" data-color="orange">
-        <div class="col padding-top-bottom"><h1 class="display-3 text-light">About Us <small class="text-muted d-none d-md-block d-lg-block d-xl-block"> giving power back to students.</small> </h1>
+    <div class="row align-items-center panel whole-page" id="aboutus_div" data-color="dark-green">
+        <div class="col padding-top-bottom"><h1 class="display-3 text-light">About Us <small class="text-secondary d-none d-md-block d-lg-block d-xl-block"> giving power back to students.</small> </h1>
             <p class="h3">
                 Founded in 2017 by University of South Florida students, Celebre is a space where students can gain valuable class resources.
                 This application is beneficial to all students including
