--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
         <h6 class="text-light mouse-pointer go-to-first"><i class="material-icons navbar-toggler-icon">&#xE5C4;</i></h6>
 
         <h1 class="large text-white">Enter your Phone Number</h1>
-        <p class="h5 text-dark">We'll send you a verification text message. <br><br> SMS standard rates apply.</p>
+        <p class="h5 text-white">We'll send you a verification text message. <br><br> SMS standard rates apply.</p>
         <form id="phoneNumberAuth">
             <input style="visibility: hidden;" class="toggle">
             <div class="row">
@@ -91,7 +91,7 @@
                 <h1 class="display-3 margin-top-none text-white float-right">Sign-up</h1>
             </div>
             <div class="col-12">
-                <p class="h5 text-dark margin-bottom-20 float-right">Authorize yourself through one the following services.</p>
+                <p class="h5 text-white margin-bottom-20 float-right">Authorize yourself through one the following services.</p>
             </div>
             <div class="col">
                 <div class="d-block d-md-none">
@@ -130,7 +130,7 @@
         <h6 class="text-light mouse-pointer panel-back-button"><i class="material-icons navbar-toggler-icon">&#xE5C4;</i></h6>
 
         <h1 class="large text-white">What's your email?</h1>
-        <p class="h6 text-dark">This is private information and will not be visible to other users.</p>
+        <p class="h6 text-white">This is private information and will not be visible to other users.</p>
         <form id="emailForm">
             <input style="visibility: hidden;" class="toggle"><br>
             <input class="form-control-lg medium weektitle text-success" type="email" id="emailInput" placeholder="email@mail.com"><br><br>
@@ -212,7 +212,18 @@
 
 
 
-
+    <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loadingModalLabel">Confirming Register Request</h5>
+                </div>
+                <div class="modal-body">
+                    One moment please...
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
