--- a/login.html
+++ b/login.html
@@ -175,6 +175,19 @@
 
 
 
+    <div class="modal fade" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loadingModalLabel">Confirming Login Request</h5>
+                </div>
+                <div class="modal-body">
+                    One moment please...
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
