Removed some images

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
         <div class=" col-md-8 col-sm-12">
-            <h1 class="d-block d-md-none display-4 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1>
+            <h1 class="d-block d-md-none display-4 text-white">Célèbre means<br><custom class="celebre-means">noted</custom></h1>
             <h1 class="d-none d-md-block d-lg-block d-xl-block display-1 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1><br>
             <p class="h3 text-light">
                 some text about how incredible celebre is<br>
