--- a/home.html
+++ b/home.html
@@ -115,48 +115,28 @@
         </div>
 
 
+        <p class="lead font-weight-bold text-light subtitle-course">Exams <custom class="float-right small text-dark">view more exams</custom></p>
+        <div class="row no-select highlight-to-yellow">
+            <div class="col-9">
+                <p class="d-block d-md-none font-weight-light lead text-light text-truncate">Exam 2 in 1 Day (1/27/2018)
+                <p class="d-none d-md-block d-lg-block d-xl-block h2 font-weight-light text-light">Exam 2 in 1 Day (1/27/2018) </p>
+            </div>
+            <div class="col align-self-center text-right padding-top-bottom">
+                <i class="material-icons text-light">&#xE5D4;</i>
+            </div>
+        </div>
 
-        <p class="lead font-weight-bold text-light subtitle-course">Next Assignments Due</p>
+        <p class="lead font-weight-bold text-light subtitle-course">Assignments <custom class="float-right small text-dark">view more assignments</custom></p>
         <div class="row no-select highlight-to-yellow">
-            <div class="col-8">
-                <p class="d-block d-md-none font-weight-light lead text-success text-truncate">HW in 1 Days
-                    <small class="text-light d-block d-md-none">Homework #4: Polynomials</small> </p>
-                <p class="d-none d-md-block d-lg-block d-xl-block h2 font-weight-light text-success">HW in 1 Days <small class="text-light">Homework #4: Polynomials</small> </p>
+            <div class="col-9">
+                <p class="d-block d-md-none font-weight-light lead text-success text-light">Homework #4 in 2 days </p>
+                <p class="d-none d-md-block d-lg-block d-xl-block h2 font-weight-light text-light">Homework #4 in 2 days </p>
             </div>
             <div class="col align-self-center text-right padding-top-bottom">
                 <i class="material-icons text-light">&#xE5D4;</i>
             </div>
         </div>
-        <div class="row no-select highlight-to-yellow">
-            <div class="col-8">
-                <p class="d-block d-md-none font-weight-light lead text-light text-truncate">HW in 3 Days
-                    <small class="text-light d-block d-md-none">Homework #5: Other Math</small> </p>
-                <p class="d-none d-md-block d-lg-block d-xl-block h2 font-weight-light text-light">HW in 3 Days <small class="text-light">Homework #5: Other Math</small> </p>
-            </div>
-            <div class="col align-self-center text-right padding-top-bottom">
-                <i class="material-icons text-light">&#xE5D4;</i>
-            </div>
-        </div>
-        <div class="row no-select highlight-to-yellow">
-            <div class="col-8">
-                <p class="d-block d-md-none font-weight-light lead text-success text-truncate">Exam in 4 Days
-                    <small class="text-light d-block d-md-none">Exam #1: Polynomials</small> </p>
-                <p class="d-none d-md-block d-lg-block d-xl-block h2 font-weight-light text-success">EXAM in 4 Days <small class="text-">Exam #1: Polynomials</small> </p>
-            </div>
-            <div class="col align-self-center text-right padding-top-bottom">
-                <i class="material-icons text-light">&#xE5D4;</i>
-            </div>
-        </div>
-        <div class="row no-select highlight-to-yellow">
-            <div class="col-8">
-                <p class="d-block d-md-none font-weight-light lead text-light text-truncate">HW in 6 Days
-                    <small class="text-light d-block d-md-none">Homework #6: Advanced Math</small> </p>
-                <p class="d-none d-md-block d-lg-block d-xl-block h2 font-weight-light text-light">HW in 6 Days <small class="text-">Homework #6: Advanced Math</small> </p>
-            </div>
-            <div class="col align-self-center text-right padding-top-bottom">
-                <i class="material-icons text-light">&#xE5D4;</i>
-            </div>
-        </div>
+
 
 
     </div>
