--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <h1 class="d-block d-md-none display-4 text-white">Célèbre means<br><custom class="celebre-means">noted</custom></h1>
             <h1 class="d-none d-md-block d-lg-block d-xl-block display-1 text-white">Célèbre means <custom class="celebre-means">noted</custom></h1><br>
             <p class="h3 text-light">
-                some text about how incredible celebre is<br>
-                <button class="btn btn-outline-light my-2 my-sm-0 move-next-button" type="submit">See more</button>
+                Take notes with classes mates in real time <br>
+                <button class="btn btn-outline-light my-2 my-sm-1 move-next-button" type="submit">See more</button>
 
             </p>
         </div>
@@ -128,7 +128,6 @@
                 <h1 class="display-4">Built by students, for students</h1>
                 <p class="h3 text-dark">
                     Connecting classmates together is the best way to learn - having the ability to share class notes/videos and ask questions.
-                    Celebre aims to enhance all students’ progress in their classes and in doing so, hopes to spread its mission nationwide.
                     <button class="btn btn-outline-dark my-2 my-sm-0 move-next-button" type="submit">See Features</button>
 
                 </p>
@@ -145,11 +144,11 @@
             <div class="col-sm-12">
                 <h1 class="display-3 text-white text-white">Features</h1>
             </div>
-            <div class="d-none d-md-block d-lg-block d-xl-block col-md-6 ">
+            <!--<div class="d-none d-md-block d-lg-block d-xl-block col-md-6 ">-->
 
-                <!--<p class="align-content-center d-flex justify-content-center"><img src="https://bootstrap-themes.github.io/marketing/assets/img/startup-2.jpg"></p>-->
+                <!--&lt;!&ndash;<p class="align-content-center d-flex justify-content-center"><img src="https://bootstrap-themes.github.io/marketing/assets/img/startup-2.jpg"></p>&ndash;&gt;-->
 
-            </div>
+            <!--</div>-->
             <div class="col">
                 <p class="h1 text-success">Course Code Specified</p>
                 <p class="lead ">Your subjects and classes in Celebre will be calibrated by the course code that you use to register classes,
@@ -168,12 +167,12 @@
         </div>
         <div class="row align-items-center padding-top-bottom" >
             <div class="col">
-                <p class="h1 text-right text-success">Notifications</p>
+                <p class="h1 text-success">Notifications</p>
                 <p class="lead">Missing an assignment deadline is unfortunate as is seeing how close an exam is approaching before it is too late.
                     For this reason, notifications will help students remind them of assignment deadlines, upcoming exams, and required discussion posts.
                 </p>
             </div>
-            <div class="d-none d-md-block d-lg-block d-xl-block col-md-6 ">
+            <div class="d-none d-md-block d-lg-block d-xl-block ">
 
                 <!--<p class="align-content-center d-flex justify-content-center"><img src="https://bootstrap-themes.github.io/marketing/assets/img/startup-2.jpg"></p>-->
 
